add the documentation of the api with sapi with swagger autogen and openapi 3.0.0
